<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/navSearchNumber"
            android:icon="@drawable/ic_search"
            android:title="@string/search_number" />
        <item
            android:id="@+id/navBlockNumberList"
            android:icon="@drawable/ic_block"
            android:title="@string/block_number" />

        <item
            android:id="@+id/navSearchImportantNumber"
            android:icon="@drawable/ic_info"
            android:title="@string/search_important_number" />

        <item
            android:id="@+id/navBackupRestore"
            android:icon="@drawable/ic_backup"
            android:title="@string/backup_and_restore" />
        <item
            android:id="@+id/navFindMobile"
            android:icon="@drawable/ic_phone"
            android:title="@string/find_mobile" />

        <item
            android:id="@+id/navSetting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_power"
            android:title="@string/log_out" />
    </group>


</menu>